--- a/app/src/main/res/layout/activity_statistik.xml
+++ b/app/src/main/res/layout/activity_statistik.xml
@@ -4,23 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DisplayListView">
+    tools:context=".Statistik">
 
     <include
         layout = "@layout/toolbar"
         android:id="@+id/toolbarBasis">
     </include>
-
-    <ListView
-        android:id="@+id/listview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/toolbarBasis">
-
-    </ListView>
-
-
-
 
 </android.support.constraint.ConstraintLayout>
