--- a/app/src/main/res/layout/activity_disziplin.xml
+++ b/app/src/main/res/layout/activity_disziplin.xml
@@ -24,33 +24,38 @@
         <Button
             android:id="@+id/btnWeitsprung"
             android:layout_width="match_parent"
-            android:layout_height="104dp"
-            android:textSize="30sp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="272dp"
+            android:layout_height="60dp"
+            android:layout_centerVertical="true"
             android:background="#e7e247"
-            android:onClick="parseJSON"
-            android:text="Weitsprung" />
+            android:text="Weitsprung"
+            android:textSize="30sp" />
 
         <Button
             android:id="@+id/btnSchwimmen"
             android:layout_width="match_parent"
-            android:layout_height="104dp"
-            android:textSize="30sp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="156dp"
+            android:layout_height="62dp"
+            android:layout_above="@+id/btnSprint"
             android:background="#e7e247"
-            android:text="Schwimmen" />
+            android:text="Schwimmen"
+            android:textSize="30sp" />
 
         <Button
             android:id="@+id/btnSprint"
             android:layout_width="match_parent"
-            android:layout_height="104dp"
-            android:textSize="30sp"
+            android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="40dp"
             android:background="#e7e247"
-            android:text="Sprint" />
+            android:text="Sprint"
+            android:textSize="30sp" />
+
+        <Button
+            android:id="@+id/GetKlasse"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:onClick="getJSON"
+            android:text="Bestätigen" />
 
     </RelativeLayout>
 
