--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,11 +12,10 @@
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
-
 
 
         <Button
@@ -27,6 +26,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="87dp"
             android:background="@android:color/holo_green_light"
+            android:onClick="getJSON"
             android:text="Einloggen"
             android:textSize="30sp" />
 
@@ -55,10 +55,10 @@
         <TextView
             android:id="@+id/txtView1"
             android:layout_width="221dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
+            android:layout_height="78dp"
+            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="60dp"
+            android:layout_marginTop="144dp"
             android:textAlignment="center" />
 
     </RelativeLayout>
