--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,13 +14,13 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="442dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="0.496">
 
 
         <TextView
@@ -43,7 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="104dp"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="156dp"
+            android:layout_marginBottom="16dp"
             android:background="#e7e247"
             android:text="Statistik"
             android:textSize="30sp"
@@ -55,9 +55,9 @@
             android:layout_width="match_parent"
             android:layout_height="104dp"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="40dp"
+            android:layout_marginBottom="138dp"
             android:background="#e7e247"
-            android:text="Disziplin"
+            android:text="Disziplinen"
             android:textSize="30sp"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="215dp" />
