--- a/app/src/main/res/layout/activity_disziplin.xml
+++ b/app/src/main/res/layout/activity_disziplin.xml
@@ -16,16 +16,16 @@
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="371dp"
+        android:layout_marginBottom="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent">
 
         <Button
             android:id="@+id/btnWeitsprung"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_centerVertical="true"
+            android:layout_height="wrap_content"
             android:background="#e7e247"
             android:text="Weitsprung"
             android:textSize="30sp" />
@@ -33,8 +33,8 @@
         <Button
             android:id="@+id/btnSchwimmen"
             android:layout_width="match_parent"
-            android:layout_height="62dp"
-            android:layout_above="@+id/btnSprint"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btnWeitsprung"
             android:background="#e7e247"
             android:text="Schwimmen"
             android:textSize="30sp" />
@@ -43,19 +43,10 @@
             android:id="@+id/btnSprint"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="40dp"
+            android:layout_below="@+id/btnSchwimmen"
             android:background="#e7e247"
             android:text="Sprint"
             android:textSize="30sp" />
-
-        <Button
-            android:id="@+id/GetKlasse"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:onClick="getJSON"
-            android:text="Bestätigen" />
 
     </RelativeLayout>
 
