--- a/app/src/main/res/layout/activity_statistik1.xml
+++ b/app/src/main/res/layout/activity_statistik1.xml
@@ -21,6 +21,16 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent">
 
+        <TextView
+            android:id="@+id/auswah"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="111dp"
+            tools:layout_editor_absoluteX="162dp"
+            tools:layout_editor_absoluteY="167dp" />
+
         <Button
             android:id="@+id/btnWeitsprung"
             android:layout_width="match_parent"
@@ -58,6 +68,7 @@
             android:text="Bestätigen" />
 
         <RadioGroup
+            android:id="@+id/radiogroupSex"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -126,6 +137,9 @@
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/btnDropdownKlassen" />
 
+
     </RelativeLayout>
+
+
 
 </android.support.constraint.ConstraintLayout>
