--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -152,6 +152,15 @@
             app:layout_constraintTop_toBottomOf="@+id/textView6"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteX="16dp" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="335dp"
+            android:layout_height="78dp"
+            android:layout_marginTop="8dp"
+            android:text="TextView"
+            app:layout_constraintTop_toBottomOf="@+id/springen"
+            tools:layout_editor_absoluteX="18dp" />
     </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
