--- a/app/src/main/res/layout/activity_sprungeingabe.xml
+++ b/app/src/main/res/layout/activity_sprungeingabe.xml
@@ -160,6 +160,18 @@
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/springen"
             tools:layout_editor_absoluteX="18dp" />
+
+        <TextView
+            android:id="@+id/Änderung"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/Name"
+            app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
