--- a/app/src/main/res/layout/activity_statistik1.xml
+++ b/app/src/main/res/layout/activity_statistik1.xml
@@ -137,15 +137,15 @@
 
         <Spinner
             android:id="@+id/btnDropdownKlassen"
-            android:layout_width="99dp"
-            android:layout_height="51dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/txtKlasse" />
 
         <Spinner
             android:id="@+id/btnDropdownUnterklassen"
-            android:layout_width="99dp"
-            android:layout_height="51dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/btnDropdownKlassen" />
 
