--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,31 +6,36 @@
     android:layout_height="match_parent"
     tools:context=".Home">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="8dp"
+        android:alpha="0.75"
+        android:scaleType="centerCrop"
+        app:layout_constraintTop_toBottomOf="@+id/toolbarBasis"
+        app:srcCompat="@mipmap/sportplatz" />
+
     <include
         layout = "@layout/toolbar"
         android:id="@+id/toolbarBasis">
     </include>
 
-
     <RelativeLayout
+        android:id="@+id/relativeLayout3"
         android:layout_width="match_parent"
-        android:layout_height="442dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.496">
-
+        android:layout_height="match_parent">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="281dp"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="130dp"
+            android:layout_marginTop="95dp"
             android:text="Sportfest 2018"
-            android:textSize="30sp"
+            android:textAlignment="center"
+            android:textColor="@android:color/background_dark"
+            android:textSize="60sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.501"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -43,7 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="104dp"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="73dp"
             android:background="#e7e247"
             android:text="Statistik"
             android:textSize="30sp"
@@ -55,7 +60,7 @@
             android:layout_width="match_parent"
             android:layout_height="104dp"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="138dp"
+            android:layout_marginBottom="191dp"
             android:background="#e7e247"
             android:text="Disziplinen"
             android:textSize="30sp"
@@ -63,5 +68,6 @@
             tools:layout_editor_absoluteY="215dp" />
 
     </RelativeLayout>
+
 
 </android.support.constraint.ConstraintLayout>
