--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -21,53 +22,22 @@
         android:id="@+id/toolbarBasis">
     </include>
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout3"
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/main_nav"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="56dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        app:itemBackground="@color/colorPrimary"
+        app:menu="@menu/nav_items">
+    </android.support.design.widget.BottomNavigationView>
 
-        <TextView
-            android:layout_width="281dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="95dp"
-            android:text="Sportfest 2018"
-            android:textAlignment="center"
-            android:textColor="@android:color/background_dark"
-            android:textSize="60sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.501"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.032" />
+    <FrameLayout
+        android:id="@+id/main_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/main_nav"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/toolbarBasis"></FrameLayout>
 
-        <Button
-            android:id="@+id/btnStatistik"
-            android:layout_width="match_parent"
-            android:layout_height="104dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="73dp"
-            android:background="#e7e247"
-            android:text="Statistik"
-            android:textSize="30sp"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="329dp" />
-
-        <Button
-            android:id="@+id/btnDisziplin"
-            android:layout_width="match_parent"
-            android:layout_height="104dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="191dp"
-            android:background="#e7e247"
-            android:text="Disziplinen"
-            android:textSize="30sp"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="215dp" />
-
-    </RelativeLayout>
-
-
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
