--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -1,53 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="75dp">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="75dp">
 
     <TextView
         android:id="@+id/tx_nummer"
-        android:layout_width="59dp"
+        android:layout_width="52dp"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="13dp"
         android:gravity="center"
-        android:text="Nummer"
+        android:text="20"
+        android:textAlignment="center"
         android:textAppearance="?android:textAppearanceLarge" />
 
     <TextView
         android:id="@+id/tx_klasse"
-        android:layout_width="55dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_toRightOf="@id/tx_nummer"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="84dp"
         android:gravity="center"
-        android:text="Nummer"
+        android:text="2"
+        android:textAlignment="viewStart"
         android:textAppearance="?android:textAppearanceLarge" />
 
     <TextView
         android:id="@+id/tx_unterklasse"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginLeft="0dp"
         android:layout_toRightOf="@id/tx_klasse"
         android:gravity="center"
-        android:text="Nummer"
+        android:text="B"
+        android:textAlignment="viewStart"
         android:textAppearance="?android:textAppearanceLarge" />
 
     <TextView
         android:id="@+id/tx_name"
-        android:layout_width="15dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@id/tx_unterklasse"
+        android:layout_toEndOf="@+id/h_klasse"
         android:gravity="center"
-        android:text="Nummer"
+        android:text="LangerName"
+        android:textAlignment="viewStart"
         android:textAppearance="?android:textAppearanceLarge" />
 
-    <TextView
-        android:id="@+id/h_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="2dp"
-        android:layout_toEndOf="@+id/h_unterklasse"
-        android:text="Name" />
+
 
     <TextView
         android:id="@+id/h_unterklasse"
@@ -56,7 +59,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="-1dp"
         android:layout_toEndOf="@+id/h_klasse"
-        android:text="Unter-Klasse | " />
+        android:text="Name" />
 
     <TextView
         android:id="@+id/h_klasse"
@@ -70,8 +73,8 @@
         android:id="@+id/h_nummer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/tx_nummer"
         android:text="Nummer | " />
 
 
