--- a/app/src/main/res/layout/activity_statistik1.xml
+++ b/app/src/main/res/layout/activity_statistik1.xml
@@ -13,7 +13,7 @@
     </include>
 
     <RelativeLayout
-        android:id="@+id/relativeLayout"
+        android:id="@+id/buttonContainer"
         android:layout_width="match_parent"
         android:layout_height="371dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -121,7 +121,7 @@
         android:layout_marginTop="32dp"
         android:background="#e7e247"
 
-        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
+        app:layout_constraintBottom_toTopOf="@+id/buttonContainer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbarBasis"
